--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "dayjs": "^1.11.19",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
+    "react-calendar-timeline": "0.30.0-beta.4",
     "react-dom": "^19.2.3",
-    "react-router": "7.12.0"
+    "react-router": "7.12.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
